Tentative afficher carte
Tentative afficher carte du ciel en png uniquement

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
 
   assets:
     - assets/triangle.png
+    - assets/carte_ciel.png
     - assets/Chicken_01/
   # To add assets to your application, add an assets section, like this:
   # assets:
