--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  tests: ^any_version
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -65,6 +65,7 @@ flutter:
 
   assets:
     - assets/triangle.png
+    - assets/Earth.glb
     - assets/carte_ciel.png
     - assets/Chicken_01/
   # To add assets to your application, add an assets section, like this:
