--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   satellite_dart: ^1.0.2
   simple_3d_renderer: ^12.0.1
+  arcore_flutter_plugin: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,7 @@ flutter:
 
   assets:
     - assets/triangle.png
-    - assets/Earth.glb
+    - assets/earth/
     - assets/carte_ciel.png
     - assets/Chicken_01/
   # To add assets to your application, add an assets section, like this:
