--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,76 @@
-name: Android Release
+name: Flutter CI/CD
 
-# 1
 on:
-  # 2
   push:
-    branches: [ "master" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
-  # 3
-  workflow_run:
-
-# 4
 jobs:
-  # 5
   build:
-    # 6
     runs-on: ubuntu-latest
 
-    # 7
     steps:
-      # 8
-      - uses: actions/checkout@v3
-      # 9
-      - uses: actions/setup-java@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          distribution: 'zulu'
-          java-version: "12.x"
-      # 10   
-      - uses: subosito/flutter-action@v2
-        with:
-          # 11
-          flutter-version: "3.0.0"
-          channel: 'stable'
-      # 12
-      - name: Get dependencies
+          flutter-version: 'stable'
+
+      - name: Get Dependencies
         run: flutter pub get
 
-      # Runs a set of commands using the runners shell
-      - name: Start release build
-        run: flutter build appbundle
+      - name: Run Tests
+        run: flutter test
+
+      - name: Build Android APK
+        run: flutter build apk
+
+      - name: Build iOS Archive
+        run: flutter build ios --release --no-codesign
+
+      - name: Archive Outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release
+          path: |
+            build/app/outputs/apk/release/app-release.apk
+            build/ios/archive/Runner.xcarchive
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'stable'
+
+      - name: Get Dependencies
+        run: flutter pub get
+
+      - name: Build Android Release Bundle
+        run: flutter build appbundle --release
+
+      - name: Archive Outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-bundle
+          path: build/app/outputs/bundle/release/app.aab
+
+      - name: Build iOS Archive
+        run: flutter build ios --release --no-codesign
+
+      - name: Archive Outputs
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release
+          path: build/ios/archive/Runner.xcarchive
