Bugfix solar system stars
Fixed a bug where it would be the same 3D model even when going back to the menu and choosing another one

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
 
   assets:
     - assets/triangle.png
-    - assets/earth/
+    - assets/solar_system/
     - assets/carte_ciel.png
     - assets/Chicken_01/
   # To add assets to your application, add an assets section, like this:
