--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
-
+          flutter-version: '3.3.1'
+          channel: 'stable'
       - name: Get Dependencies
         run: flutter pub get
 
@@ -52,7 +52,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.3.1'
+          channel: 'stable'
 
       - name: Get Dependencies
         run: flutter pub get
