--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           flutter-version: '3.3.1'
           channel: 'stable'
+          cache: true
+          
       - name: Get Dependencies
         run: flutter pub get
 
@@ -51,7 +53,8 @@ jobs:
         with:
           flutter-version: '3.3.1'
           channel: 'stable'
-
+          cache: true
+          
       - name: Get Dependencies
         run: flutter pub get
 
